# live_wallpaper

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/live_wallpaper/: CMakeLists.txt
src/live_wallpaper/include/live_wallpaper/: live_wallpaper.hpp  logger.hpp  wallpaper.hpp  wallpaper_storage.hpp
src/live_wallpaper/src/: live_wallpaper.cpp  logger.cpp  main.cpp  wallpaper.cpp  wallpaper_storage.cpp
src/live_wallpapers/: CMakeLists.txt
src/live_wallpapers/include/live_wallpapers/: hello.hpp  live_wallpapers.hpp
src/live_wallpapers/src/: hello.cpp  live_wallpapers.cpp  main.cpp
test_package/: conanfile.py
